--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #0088f7;
+    background-color: #37c46b;
     color: white;
   }
   
